--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="form.css"/>
-    <title>FORM</title>
+    <title>FORM WEBSITE</title>
 </head>
 <body>
     <input class="name-input" type="text" placeholder="Name"/>
