--- a/flex.html
+++ b/flex.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
    
-    <title>Flex</title>
+    <title>Flex WEBSITE</title>
     <link rel="stylesheet" href="flex.css" />
     <link rel="icon" href="./contact-us/img.jpg"/>
   </head>
