--- a/about.html
+++ b/about.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <h1 id="about-heading">About Us</h1>
-        <a href="index.html">Go Back</a>
+        <a href="index.html">Go Back -></a>
     </body>
 </html>
