--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 
-        <title>About Us Modiffied</title>
+        <title>About Us Modiffied more</title>
         <link rel="stylesheet" href="./about.css"></link>
     </head>
     <body>
